[gd_scene load_steps=16 format=3 uid="uid://d0we5r3f8xc3u"]

[ext_resource type="Script" path="res://UI/MainMenu.gd" id="1_py81k"]
[ext_resource type="Texture2D" uid="uid://dfhni6j00dy5r" path="res://Assets/Background/layers/sky.png" id="2_nrlsi"]
[ext_resource type="Texture2D" uid="uid://co5urc0t7glvp" path="res://Assets/Background/layers/rocks_1.png" id="3_j8we8"]
[ext_resource type="Texture2D" uid="uid://d25q64gtuxlav" path="res://Assets/Background/layers/rocks_2.png" id="4_kp6e7"]
[ext_resource type="Texture2D" uid="uid://ckf4whmascr57" path="res://Assets/Background/layers/clouds_1.png" id="5_4c8we"]
[ext_resource type="Texture2D" uid="uid://wufgu6vi4qg1" path="res://Assets/Background/layers/clouds_2.png" id="6_iffxx"]
[ext_resource type="Texture2D" uid="uid://tdc20vic0qry" path="res://Assets/Background/layers/clouds_3.png" id="7_ip4fs"]
[ext_resource type="Texture2D" uid="uid://c8d4hmc3ivay6" path="res://Assets/Background/layers/clouds_4.png" id="8_py01d"]
[ext_resource type="Texture2D" uid="uid://c18u0co6a5ife" path="res://Assets/SWORD OF CODE NO BACKGROUND demo.png" id="9_vsqsw"]
[ext_resource type="FontFile" uid="uid://b4xqfa0tq5nrc" path="res://Assets/font/new_font_file.tres" id="10_lmk2n"]
[ext_resource type="StyleBox" uid="uid://cnlc1nw5340e5" path="res://Assets/button.tres" id="11_kt8j0"]
[ext_resource type="AudioStream" uid="uid://bfdrqu8utid4n" path="res://Assets/soundEffect/Play.mp3" id="12_3tpqj"]
[ext_resource type="FontFile" uid="uid://58l2dvgu2fya" path="res://Assets/font/GermaniaOne-Regular.ttf" id="12_32125"]
[ext_resource type="AudioStream" uid="uid://5nfpagt14m6s" path="res://Assets/soundEffect/click.mp3" id="14_7jon3"]
[ext_resource type="AudioStream" uid="uid://ci4phh8sr8i6l" path="res://Assets/soundEffect/xDeviruchi - And The Journey Begins .wav" id="15_oo2ua"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 2.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_py81k")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/sky"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_nrlsi")
centered = false

[node name="rocks" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/rocks"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_j8we8")
centered = false

[node name="cloud" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/cloud"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_4c8we")
centered = false

[node name="cloud2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/cloud2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_iffxx")
centered = false

[node name="cloud3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/cloud3"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_ip4fs")
centered = false

[node name="cloud4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/cloud4"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("8_py01d")
centered = false

[node name="rocks2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/rocks2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_kp6e7")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -327.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
rotation = -4.36733e-05

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="logo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("9_vsqsw")
expand_mode = 1

[node name="buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/buttons/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.917647, 0.917647, 0.917647, 1)
theme_override_fonts/font = ExtResource("10_lmk2n")
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = ExtResource("11_kt8j0")
theme_override_styles/hover = ExtResource("11_kt8j0")
text = "PLAY"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/buttons/MarginContainer/Play"]
stream = ExtResource("12_3tpqj")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="Select" type="Button" parent="MarginContainer/VBoxContainer/buttons/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.917647, 0.917647, 0.917647, 1)
theme_override_fonts/font = ExtResource("12_32125")
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = ExtResource("11_kt8j0")
theme_override_styles/hover = ExtResource("11_kt8j0")
text = "SELECT LESSONS"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/buttons/MarginContainer2/Select"]
stream = ExtResource("14_7jon3")

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/buttons/MarginContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.917647, 0.917647, 0.917647, 1)
theme_override_fonts/font = ExtResource("12_32125")
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = ExtResource("11_kt8j0")
theme_override_styles/hover = ExtResource("11_kt8j0")
text = "QUIT
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/buttons/MarginContainer4/Quit"]
stream = ExtResource("14_7jon3")

[node name="Window" type="Window" parent="."]
title = "Alert!"
initial_position = 1
size = Vector2i(335, 100)
visible = false

[node name="Label" type="Label" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Press back button to exit the game"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Window/Label"]
stream = ExtResource("14_7jon3")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Demo v1.5"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_oo2ua")
volume_db = -10.254
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/buttons/MarginContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/buttons/MarginContainer2/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/buttons/MarginContainer4/Quit" to="." method="_on_quit_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
